--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "devDependencies": {
     "bootstrap": "^5.3.0-alpha2",
+    "bootstrap-icons": "^1.10.4",
+    "openai": "^3.2.1",
     "react-router-dom": "^6.10.0",
     "sass": "^1.60.0"
   }
