--- a/package.json
+++ b/package.json
@@ -38,7 +38,11 @@
   "devDependencies": {
     "bootstrap": "^5.3.0-alpha2",
     "bootstrap-icons": "^1.10.4",
+    "dotenv": "^16.0.3",
+    "fs": "^0.0.1-security",
     "openai": "^3.2.1",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "react-router-dom": "^6.10.0",
     "sass": "^1.60.0"
   }
