--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "@emailjs/browser": "^3.11.0",
     "bootstrap": "^5.3.0-alpha2",
     "bootstrap-icons": "^1.10.4",
     "dotenv": "^16.0.3",
